--- a/feladat.html
+++ b/feladat.html
@@ -275,3 +275,34 @@ UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
 Germany_JohnTheFab41 kihagyva (100%), <br />
 Germany_RingoTheFab4, not updated, 0.25<br />
 Germany_GeorgeTheFab42, <b>updated</b>, 732, <a href="https://www.munzee.com/map/u0w7yp6un/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_GeorgeTheFab42.json" target="_blank">json</a><br />
+Germany_PaulTheFab43, not updated, 0.7200000000000131<br />
+Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
+Hungary_MaXGarden kihagyva (100%), <br />
+Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
+Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
+Hungary_SZTE, not updated, 0.0<br />
+Hungary_MarioInVac, not updated, 0.0<br />
+Hungary_LovagokKertje kihagyva (100%), <br />
+Hungary_ShieldKecskemet, not updated, 0.0<br />
+Hungary_Mini kihagyva (100%), <br />
+Hungary_MinimalIceCubeInBaja kihagyva (100%), <br />
+Hungary_SailboatAtLakeBalaton, not updated, 0.0<br />
+Hungary_EyesInTheNight kihagyva (100%), <br />
+Hungary_PomazLocomotiv kihagyva (100%), <br />
+Slovakia_Bratislava kihagyva (100%), <br />
+Slovakia_ChilliKiller, not updated, 0.0<br />
+Slovakia_LakeLighthousePainting, not updated, 0.0<br />
+Slovakia_ChargeBratislava kihagyva (100%), <br />
+Slovakia_VirtualJoy kihagyva (100%), <br />
+Slovakia_ElectricLetters kihagyva (100%), <br />
+Slovakia_DevinCastle kihagyva (100%), <br />
+Slovakia_EvoFlowerBratislava kihagyva (100%), <br />
+Slovakia_1stDayEvo kihagyva (100%), <br />
+Slovakia_BosniaFlagInBratislava kihagyva (100%), <br />
+Slovakia_AgentSun kihagyva (100%), <br />
+Slovakia_CandleTombstone kihagyva (100%), <br />
+----csoportok<br />
+----városok<br />
+----felhasználók<br />
+<b>stop</b> - 2022.12.03 01:38:56<br />
+összesen 1726<br />
