--- a/feladat.html
+++ b/feladat.html
@@ -43,3 +43,4 @@ Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, <b>updated</b>, 180, <a href="https://www.munzee.com/map/dj86pp7dz/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_USMGoldenEagles.json" target="_blank">json</a><br />
+USA_Turtle, <b>updated</b>, 667, <a href="https://www.munzee.com/map/dhv9d3vyu/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Turtle.json" target="_blank">json</a><br />
