--- a/feladat.html
+++ b/feladat.html
@@ -274,3 +274,5 @@ Canada_JeffsFarm kihagyva (100%), <br />
 UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
 Germany_JohnTheFab41 kihagyva (100%), <br />
 Germany_RingoTheFab4, <b>updated</b>, 300, <a href="https://www.munzee.com/map/u0w7yn1s8/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_RingoTheFab4.json" target="_blank">json</a><br />
+Germany_GeorgeTheFab42, not updated, 0.9299999999999997<br />
+Germany_PaulTheFab43, <b>updated</b>, 1203, <a href="https://www.munzee.com/map/u0w7yrd1n/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_PaulTheFab43.json" target="_blank">json</a><br />
