--- a/feladat.html
+++ b/feladat.html
@@ -276,3 +276,29 @@ Germany_JohnTheFab41 kihagyva (100%), <br />
 Germany_RingoTheFab4, <b>updated</b>, 300, <a href="https://www.munzee.com/map/u0w7yn1s8/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_RingoTheFab4.json" target="_blank">json</a><br />
 Germany_GeorgeTheFab42, not updated, 0.9299999999999997<br />
 Germany_PaulTheFab43, <b>updated</b>, 1203, <a href="https://www.munzee.com/map/u0w7yrd1n/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_PaulTheFab43.json" target="_blank">json</a><br />
+Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
+Hungary_MaXGarden kihagyva (100%), <br />
+Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
+Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
+Hungary_SZTE, not updated, 0.0<br />
+Hungary_MarioInVac, not updated, 0.0<br />
+Hungary_LovagokKertje kihagyva (100%), <br />
+Hungary_ShieldKecskemet, not updated, 0.0<br />
+Hungary_Mini kihagyva (100%), <br />
+Hungary_MinimalIceCubeInBaja kihagyva (100%), <br />
+Hungary_SailboatAtLakeBalaton, not updated, 0.0<br />
+Hungary_EyesInTheNight kihagyva (100%), <br />
+Hungary_PomazLocomotiv kihagyva (100%), <br />
+Slovakia_Bratislava kihagyva (100%), <br />
+Slovakia_ChilliKiller, not updated, 0.0<br />
+Slovakia_LakeLighthousePainting, not updated, 0.0<br />
+Slovakia_ChargeBratislava kihagyva (100%), <br />
+Slovakia_VirtualJoy kihagyva (100%), <br />
+Slovakia_ElectricLetters kihagyva (100%), <br />
+Slovakia_DevinCastle kihagyva (100%), <br />
+Slovakia_EvoFlowerBratislava kihagyva (100%), <br />
+Slovakia_1stDayEvo kihagyva (100%), <br />
+Slovakia_BosniaFlagInBratislava kihagyva (100%), <br />
+Slovakia_AgentSun kihagyva (100%), <br />
+Slovakia_CandleTombstone kihagyva (100%), <br />
+Canada_SecretLantern, <b>updated</b>, 225, <a href="https://www.munzee.com/map/f246dmm85/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_SecretLantern.json" target="_blank">json</a> <b>100%</b><br />
