--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.12.05 14:49:50<br />
+<b>start</b> - 2022.12.05 16:25:43<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.7396449704142043<br />
@@ -42,8 +42,8 @@ Spain_WineOClock kihagyva (100%), <br />
 Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
-USA_USMGoldenEagles, not updated, 0.24154589371980606<br />
-USA_Turtle, not updated, 0.08818342151675296<br />
+USA_USMGoldenEagles, not updated, 0.7246376811594182<br />
+USA_Turtle, not updated, 0.17636684303350592<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.0<br />
 Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
@@ -55,7 +55,7 @@ Netherlands_WapenVanEnkhuizen, not updated, 1.0<br />
 USA_OfficerDown, not updated, 0.0<br />
 Hungary_Brigetio, not updated, 0.3846153846153797<br />
 Hungary_GoatInKecskemet, not updated, 0.0<br />
-Hungary_TaskasSmiley, not updated, 0.0<br />
+Hungary_TaskasSmiley, not updated, 0.33112582781457434<br />
 Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
 Slovakia_FlagOfSlovakia, not updated, 0.6500000000000021<br />
 Hungary_SurpriseAirline, not updated, 0.0<br />
@@ -63,7 +63,7 @@ Hungary_RubiksCube, not updated, 0.0<br />
 Hungary_GyulaCastle, not updated, 0.0<br />
 USA_2019TexasChallenge, not updated, 0.28999999999999915<br />
 USA_FortMyersAlligator, not updated, 0.0<br />
-Denmark_TheSwanInHilleroed, not updated, 0.0<br />
+Denmark_TheSwanInHilleroed, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
 Hungary_CsepelObol, not updated, 0.0<br />
 Hungary_CsepelVasEsFemmuvekLogo, not updated, 0.0<br />
 Czechia_KMZNAK, not updated, 0.11999999999999034<br />
@@ -148,160 +148,4 @@ Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, <b>updated</b>, 1316, <a href="https://www.munzee.com/map/9zvwq5uf3/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakevillesSeaTurtle.json" target="_blank">json</a> <b>100%</b><br />
-USA_LightningBoltInSapphire, <b>updated</b>, 290, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
-USA_AppleValley-EvolutionaryFlower, <b>updated</b>, 382, <a href="https://www.munzee.com/map/9zvwqtjtx/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleValley-EvolutionaryFlower.json" target="_blank">json</a><br />
-Germany_Bullseye kihagyva (100%), <br />
-Finland_TampereElectric, not updated, 0.0<br />
-USA_MontgomeryBaseball, not updated, 0.0<br />
-USA_HanksBoots, not updated, 0.0<br />
-USA_ColorTheZoo, not updated, 0.0<br />
-Netherlands_SupermanVsBatman kihagyva (100%), <br />
-Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
-Slovakia_IcemenInLove kihagyva (100%), <br />
-Slovakia_TrencinCastle, not updated, 0.0<br />
-UnitedKingdom_HoratioTheHermitCrab kihagyva (100%), <br />
-Australia_PiratePetesParrot kihagyva (100%), <br />
-UnitedKingdom_DownhamCheshireCat kihagyva (100%), <br />
-UnitedKingdom_TheQueensCrown kihagyva (100%), <br />
-UnitedKingdom_SandcastleInSheringham kihagyva (100%), <br />
-USA_PiratesTreasure kihagyva (100%), <br />
-Australia_QueenslandKoala kihagyva (100%), <br />
-USA_GiraffeInGadsden kihagyva (100%), <br />
-USA_AnaheimSapphire kihagyva (100%), <br />
-Finland_HelsinkiColour kihagyva (100%), <br />
-USA_BearmomscoutersXmasPolarBear kihagyva (100%), <br />
-Germany_SkylarkFeldlerche kihagyva (100%), <br />
-Netherlands_MysteryBikeField kihagyva (100%), <br />
-Australia_Brisbane, not updated, 0.0<br />
-Australia_EgyptianMask kihagyva (100%), <br />
-Germany_BerlinMunzeePin, not updated, 0.07000000000000028<br />
-Germany_DiamantBerlin, not updated, 0.0<br />
-Germany_BerlinBear, not updated, 0.0<br />
-Germany_HonowWappen, not updated, 0.3355704697986539<br />
-Canada_GatineauEvo, not updated, 0.75<br />
-Germany_ColorsBonn kihagyva (100%), <br />
-Germany_BTHVN2020 kihagyva (100%), <br />
-Canada_GatineauScarletTulip kihagyva (100%), <br />
-Canada_RumballMachine kihagyva (100%), <br />
-Canada_OttawaFireworks kihagyva (100%), <br />
-Canada_HospitalLove kihagyva (100%), <br />
-Hungary_Q94 kihagyva (100%), <br />
-Hungary_ChristmasTreeInBudapest kihagyva (100%), <br />
-Hungary_RWG kihagyva (100%), <br />
-Hungary_Grail kihagyva (100%), <br />
-Hungary_DVTKInMiskolc, not updated, 0.0<br />
-Hungary_Beagle kihagyva (100%), <br />
-Hungary_ElectricDebrecen, not updated, 0.9501187648456124<br />
-Hungary_KodalysViolin kihagyva (100%), <br />
-Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
-Hungary_64color kihagyva (100%), <br />
-Hungary_ShieldBudapest, not updated, 0.0<br />
-Hungary_ShieldMiskolc, not updated, 0.0<br />
-Hungary_ShieldEger, not updated, 0.0<br />
-Hungary_MunzeeLogo kihagyva (100%), <br />
-Hungary_GreatChurch kihagyva (100%), <br />
-Canada_SpringInOttawa kihagyva (100%), <br />
-Canada_OttawaNewYears kihagyva (100%), <br />
-Canada_SummerInOttawa kihagyva (100%), <br />
-USA_TheAppleValleyApple kihagyva (100%), <br />
-USA_LighteksMinnesotaWild, not updated, 0.14999999999999858<br />
-USA_ChristmasWreath kihagyva (100%), <br />
-USA_WinterOlympics2018 kihagyva (100%), <br />
-USA_R2D2 kihagyva (100%), <br />
-USA_TwinCitiesSnowman kihagyva (100%), <br />
-USA_SimpsonsDonut kihagyva (100%), <br />
-USA_AppleValleyEagle, not updated, 0.0<br />
-USA_DorothyToTheEmerald kihagyva (100%), <br />
-USA_BabyYodaLovesMunzeeMania2020 kihagyva (100%), <br />
-Hungary_KavicsbanyaKecskemet kihagyva (100%), <br />
-Hungary_GyorVgFarm kihagyva (100%), <br />
-Hungary_GyoriVasutiKert, not updated, 0.0<br />
-Hungary_Colors kihagyva (100%), <br />
-Hungary_TocoskertsArrows2 kihagyva (100%), <br />
-Hungary_TocoskertsArrows3, not updated, 0.0<br />
-Hungary_60Color kihagyva (100%), <br />
-Hungary_Cata-Joy kihagyva (100%), <br />
-Hungary_FlatDebrecen, not updated, 0.0<br />
-Hungary_Debrecen2202, not updated, 0.0<br />
-Hungary_EvolutionDebrecen kihagyva (100%), <br />
-Hungary_JewelSandwich, not updated, 0.0<br />
-Hungary_Cimbi kihagyva (100%), <br />
-Hungary_Picu kihagyva (100%), <br />
-Hungary_Honey kihagyva (100%), <br />
-Hungary_QR kihagyva (100%), <br />
-Hungary_DebreceniKereszt kihagyva (100%), <br />
-Hungary_60Flat kihagyva (100%), <br />
-UnitedKingdom_TheLondonDonutCat, not updated, 0.0<br />
-UnitedKingdom_HeathrowCrossbowArrow kihagyva (100%), <br />
-UnitedKingdom_JustSmileLondon, not updated, 0.0<br />
-UnitedKingdom_HeathrowFlatSquares, not updated, 0.0<br />
-UnitedKingdom_LondonUnderground, not updated, 0.0<br />
-UnitedKingdom_RuleBritanniaArrow kihagyva (100%), <br />
-UnitedKingdom_CherryLaneCemetery-CrossGarden kihagyva (100%), <br />
-UnitedKingdom_EvolutionStrip kihagyva (100%), <br />
-UnitedKingdom_WestLondonJewel kihagyva (100%), <br />
-UnitedKingdom_TheBunnyFields kihagyva (100%), <br />
-UnitedKingdom_EvolutionRainbow kihagyva (100%), <br />
-UnitedKingdom_NorthfieldsLondonUndergroundStation, not updated, 0.0<br />
-UnitedKingdom_ShadesGarden kihagyva (100%), <br />
-UnitedKingdom_AddingtonSunflowerGarden, not updated, 0.7999999999999972<br />
-UnitedKingdom_SailingBoat, not updated, 0.0<br />
-UnitedKingdom_HendonCircle kihagyva (100%), <br />
-Australia_9thBirthdayInQueensland kihagyva (100%), <br />
-Australia_MayPole kihagyva (100%), <br />
-Australia_PyramidOBadges kihagyva (100%), <br />
-Australia_QLD-Dingo kihagyva (100%), <br />
-Australia_HappyTenMunzee kihagyva (100%), <br />
-Australia_QLDPerm-Temp, not updated, 0.0<br />
-Australia_UnicornInThePark kihagyva (100%), <br />
-Germany_Berlin-HighVoltage kihagyva (100%), <br />
-Germany_ColoursOfBerlin kihagyva (100%), <br />
-Germany_9thBirthdayInBerlin kihagyva (100%), <br />
-Germany_EvoInBerlinSteglitz kihagyva (100%), <br />
-Germany_BerlinEvoGarden-PotsdamerPlatz kihagyva (100%), <br />
-Hungary_Debrecen kihagyva (100%), <br />
-Hungary_DeoCachingClan kihagyva (100%), <br />
-Hungary_TocoskertsArrows kihagyva (100%), <br />
-UnitedKingdom_WoodlandAnimals-Fox, not updated, 0.0<br />
-UnitedKingdom_WoodlandAnimals-Badger, not updated, 0.0<br />
-Canada_OttawaCancerRibbon kihagyva (100%), <br />
-Canada_OttawaGoldfish kihagyva (100%), <br />
-Canada_BananaBread kihagyva (100%), <br />
-Canada_Elephriends kihagyva (100%), <br />
-Canada_LizzysUnicorn kihagyva (100%), <br />
-Canada_JeffsFarm kihagyva (100%), <br />
-UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
-Germany_JohnTheFab41 kihagyva (100%), <br />
-Germany_RingoTheFab4, <b>updated</b>, 300, <a href="https://www.munzee.com/map/u0w7yn1s8/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_RingoTheFab4.json" target="_blank">json</a><br />
-Germany_GeorgeTheFab42, not updated, 0.9299999999999997<br />
-Germany_PaulTheFab43, <b>updated</b>, 1203, <a href="https://www.munzee.com/map/u0w7yrd1n/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_PaulTheFab43.json" target="_blank">json</a><br />
-Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
-Hungary_MaXGarden kihagyva (100%), <br />
-Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
-Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
-Hungary_SZTE, not updated, 0.0<br />
-Hungary_MarioInVac, not updated, 0.0<br />
-Hungary_LovagokKertje kihagyva (100%), <br />
-Hungary_ShieldKecskemet, not updated, 0.0<br />
-Hungary_Mini kihagyva (100%), <br />
-Hungary_MinimalIceCubeInBaja kihagyva (100%), <br />
-Hungary_SailboatAtLakeBalaton, not updated, 0.0<br />
-Hungary_EyesInTheNight kihagyva (100%), <br />
-Hungary_PomazLocomotiv kihagyva (100%), <br />
-Slovakia_Bratislava kihagyva (100%), <br />
-Slovakia_ChilliKiller, not updated, 0.0<br />
-Slovakia_LakeLighthousePainting, not updated, 0.0<br />
-Slovakia_ChargeBratislava kihagyva (100%), <br />
-Slovakia_VirtualJoy kihagyva (100%), <br />
-Slovakia_ElectricLetters kihagyva (100%), <br />
-Slovakia_DevinCastle kihagyva (100%), <br />
-Slovakia_EvoFlowerBratislava kihagyva (100%), <br />
-Slovakia_1stDayEvo kihagyva (100%), <br />
-Slovakia_BosniaFlagInBratislava kihagyva (100%), <br />
-Slovakia_AgentSun kihagyva (100%), <br />
-Slovakia_CandleTombstone kihagyva (100%), <br />
-Canada_SecretLantern, <b>updated</b>, 225, <a href="https://www.munzee.com/map/f246dmm85/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_SecretLantern.json" target="_blank">json</a> <b>100%</b><br />
-Canada_OttawaCross, <b>updated</b>, 205, <a href="https://www.munzee.com/map/f246dvryt/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_OttawaCross.json" target="_blank">json</a> <b>100%</b><br />
-Canada_MysteryBoat, <b>updated</b>, 221, <a href="https://www.munzee.com/map/f246dubv1/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_MysteryBoat.json" target="_blank">json</a> <b>100%</b><br />
-Canada_SaveTheMonarchs, <b>updated</b>, 621, <a href="https://www.munzee.com/map/f246d5kdy/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_SaveTheMonarchs.json" target="_blank">json</a> <b>100%</b><br />
+USA_LakevillesSeaTurtle, <b>updated</b>, 1308, <a href="https://www.munzee.com/map/9zvwq5uf3/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakevillesSeaTurtle.json" target="_blank">json</a> <b>100%</b><br />
