--- a/feladat.html
+++ b/feladat.html
@@ -302,3 +302,4 @@ Slovakia_BosniaFlagInBratislava kihagyva (100%), <br />
 Slovakia_AgentSun kihagyva (100%), <br />
 Slovakia_CandleTombstone kihagyva (100%), <br />
 Canada_SecretLantern, <b>updated</b>, 224, <a href="https://www.munzee.com/map/f246dmm85/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_SecretLantern.json" target="_blank">json</a> <b>100%</b><br />
+Canada_OttawaCross, <b>updated</b>, 205, <a href="https://www.munzee.com/map/f246dvryt/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_OttawaCross.json" target="_blank">json</a> <b>100%</b><br />
