--- a/feladat.html
+++ b/feladat.html
@@ -1,10 +1,10 @@
-<b>start</b> - 2022.12.07 01:10:08<br />
+<b>start</b> - 2022.12.08 01:10:08<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.7396449704142043<br />
 USA_PrattvilleTrillium, not updated, 0.45999999999999375<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
-Hungary_TatabanyaBlackhole, not updated, 0.0<br />
+Hungary_TatabanyaBlackhole, not updated, 0.10999999999999943<br />
 Hungary_VotiveChurch, not updated, -44.470000000000006<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
@@ -19,7 +19,7 @@ USA_MunzeeLogo, not updated, 0.09000000000000341<br />
 NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
 USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
 USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
-UnitedKingdom_LFCBebington, <b>updated</b>, 583, <a href="https://www.munzee.com/map/gcmze3dvm/14.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_LFCBebington.json" target="_blank">json</a><br />
+UnitedKingdom_LFCBebington, not updated, 0.0<br />
 Finland_Nurmijarvi, not updated, 0.0<br />
 Finland_Hyvinkaa, not updated, 0.47000000000000597<br />
 USA_CanonCity, not updated, 0.0<br />
@@ -31,15 +31,5 @@ Canada_Skull kihagyva (100%), <br />
 Netherlands_VlagEcht kihagyva (100%), <br />
 Netherlands_CittaslowEcht kihagyva (100%), <br />
 USA_GreenvilleGreenWave, not updated, 0.0<br />
-Australia_QueensGambit-Horse, not updated, 0.46728971962618004<br />
-USA_CommerceBarnyard, not updated, 0.8499999999999943<br />
-USA_UtahBeehive, not updated, 0.0<br />
-Canada_DinosaurPark, not updated, 0.0<br />
-UnitedKingdom_BallochIceCream kihagyva (100%), <br />
-Australia_YoureAStar, not updated, 0.18000000000000682<br />
-USA_StAugustinePirateShip, not updated, 0.8999999999999986<br />
-Spain_WineOClock kihagyva (100%), <br />
-Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
-Netherlands_PacMunzee, not updated, 0.0<br />
-UnitedKingdom_BristolBalloon, not updated, 0.0<br />
-USA_USMGoldenEagles, <b>updated</b>, 188, <a href="https://www.munzee.com/map/dj86pp7dz/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_USMGoldenEagles.json" target="_blank">json</a><br />
+Australia_QueensGambit-Horse, not updated, 0.9345794392523388<br />
+USA_CommerceBarnyard, <b>updated</b>, 1147, <a href="https://www.munzee.com/map/dnhdug6cs/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CommerceBarnyard.json" target="_blank">json</a><br />
