--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2022.12.10 01:10:10<br />
+<b>start</b> - 2022.12.11 01:10:09<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8136094674556347<br />
 USA_PrattvilleTrillium, not updated, 0.45999999999999375<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.10999999999999943<br />
-Hungary_VotiveChurch, not updated, -44.25000000000001<br />
+Hungary_VotiveChurch, not updated, -44.470000000000006<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, not updated, 0.0<br />
@@ -55,7 +55,7 @@ Netherlands_WapenVanEnkhuizen, not updated, 1.0<br />
 USA_OfficerDown, not updated, 0.0<br />
 Hungary_Brigetio, not updated, 0.3846153846153797<br />
 Hungary_GoatInKecskemet, not updated, 0.46999999999999886<br />
-Hungary_TaskasSmiley, not updated, 0.33112582781457434<br />
+Hungary_TaskasSmiley, not updated, 0.9933774834437088<br />
 Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
 Slovakia_FlagOfSlovakia, not updated, 0.6500000000000021<br />
 Hungary_SurpriseAirline, not updated, 0.0<br />
@@ -149,7 +149,7 @@ UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
 USA_LakevillesSeaTurtle kihagyva (100%), <br />
-USA_LightningBoltInSapphire, not updated, 0.0<br />
+USA_LightningBoltInSapphire, not updated, 0.7000000000000028<br />
 USA_AppleValley-EvolutionaryFlower, not updated, 0.5<br />
 Germany_Bullseye kihagyva (100%), <br />
 Finland_TampereElectric, not updated, 0.0<br />
@@ -179,4 +179,71 @@ Germany_BerlinMunzeePin, not updated, 0.07000000000000028<br />
 Germany_DiamantBerlin, not updated, 0.0<br />
 Germany_BerlinBear, not updated, 0.0<br />
 Germany_HonowWappen, not updated, 0.3355704697986539<br />
-Canada_GatineauEvo, <b>updated</b>, 126, <a href="https://www.munzee.com/map/f244tv1bn/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_GatineauEvo.json" target="_blank">json</a><br />
+Canada_GatineauEvo, not updated, 0.0<br />
+Germany_ColorsBonn kihagyva (100%), <br />
+Germany_BTHVN2020 kihagyva (100%), <br />
+Canada_GatineauScarletTulip kihagyva (100%), <br />
+Canada_RumballMachine kihagyva (100%), <br />
+Canada_OttawaFireworks kihagyva (100%), <br />
+Canada_HospitalLove kihagyva (100%), <br />
+Hungary_Q94 kihagyva (100%), <br />
+Hungary_ChristmasTreeInBudapest kihagyva (100%), <br />
+Hungary_RWG kihagyva (100%), <br />
+Hungary_Grail kihagyva (100%), <br />
+Hungary_DVTKInMiskolc, not updated, 0.0<br />
+Hungary_Beagle kihagyva (100%), <br />
+Hungary_ElectricDebrecen, not updated, 0.9501187648456124<br />
+Hungary_KodalysViolin kihagyva (100%), <br />
+Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
+Hungary_64color kihagyva (100%), <br />
+Hungary_ShieldBudapest, not updated, 0.8199999999999932<br />
+Hungary_ShieldMiskolc, not updated, 0.0<br />
+Hungary_ShieldEger, not updated, 0.0<br />
+Hungary_MunzeeLogo kihagyva (100%), <br />
+Hungary_GreatChurch kihagyva (100%), <br />
+Canada_SpringInOttawa kihagyva (100%), <br />
+Canada_OttawaNewYears kihagyva (100%), <br />
+Canada_SummerInOttawa kihagyva (100%), <br />
+USA_TheAppleValleyApple kihagyva (100%), <br />
+USA_LighteksMinnesotaWild, not updated, 0.14999999999999858<br />
+USA_ChristmasWreath kihagyva (100%), <br />
+USA_WinterOlympics2018 kihagyva (100%), <br />
+USA_R2D2 kihagyva (100%), <br />
+USA_TwinCitiesSnowman kihagyva (100%), <br />
+USA_SimpsonsDonut kihagyva (100%), <br />
+USA_AppleValleyEagle, not updated, 0.0<br />
+USA_DorothyToTheEmerald kihagyva (100%), <br />
+USA_BabyYodaLovesMunzeeMania2020 kihagyva (100%), <br />
+Hungary_KavicsbanyaKecskemet kihagyva (100%), <br />
+Hungary_GyorVgFarm kihagyva (100%), <br />
+Hungary_GyoriVasutiKert, not updated, 0.0<br />
+Hungary_Colors kihagyva (100%), <br />
+Hungary_TocoskertsArrows2 kihagyva (100%), <br />
+Hungary_TocoskertsArrows3, not updated, 0.0<br />
+Hungary_60Color kihagyva (100%), <br />
+Hungary_Cata-Joy kihagyva (100%), <br />
+Hungary_FlatDebrecen, not updated, 0.0<br />
+Hungary_Debrecen2202, not updated, 0.0<br />
+Hungary_EvolutionDebrecen kihagyva (100%), <br />
+Hungary_JewelSandwich, not updated, 0.0<br />
+Hungary_Cimbi kihagyva (100%), <br />
+Hungary_Picu kihagyva (100%), <br />
+Hungary_Honey kihagyva (100%), <br />
+Hungary_QR kihagyva (100%), <br />
+Hungary_DebreceniKereszt kihagyva (100%), <br />
+Hungary_60Flat kihagyva (100%), <br />
+UnitedKingdom_TheLondonDonutCat, not updated, 0.0<br />
+UnitedKingdom_HeathrowCrossbowArrow kihagyva (100%), <br />
+UnitedKingdom_JustSmileLondon, not updated, 0.0<br />
+UnitedKingdom_HeathrowFlatSquares, not updated, 0.0<br />
+UnitedKingdom_LondonUnderground, not updated, 0.0<br />
+UnitedKingdom_RuleBritanniaArrow kihagyva (100%), <br />
+UnitedKingdom_CherryLaneCemetery-CrossGarden kihagyva (100%), <br />
+UnitedKingdom_EvolutionStrip kihagyva (100%), <br />
+UnitedKingdom_WestLondonJewel kihagyva (100%), <br />
+UnitedKingdom_TheBunnyFields kihagyva (100%), <br />
+UnitedKingdom_EvolutionRainbow kihagyva (100%), <br />
+UnitedKingdom_NorthfieldsLondonUndergroundStation, not updated, 0.0<br />
+UnitedKingdom_ShadesGarden kihagyva (100%), <br />
+UnitedKingdom_AddingtonSunflowerGarden, not updated, 0.7999999999999972<br />
+UnitedKingdom_SailingBoat, <b>updated</b>, 606, <a href="https://www.munzee.com/map/u10j6x1kx/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_SailingBoat.json" target="_blank">json</a><br />
