--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.12.12 01:10:08<br />
+<b>start</b> - 2022.12.12 07:21:17<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8136094674556347<br />
@@ -131,22 +131,4 @@ Netherlands_EvoAppleEch kihagyva (100%), <br />
 Netherlands_CrossbowGardenEcht kihagyva (100%), <br />
 USA_GreenvilleCloverLeaf kihagyva (100%), <br />
 Denmark_IsvaffelInHilleroed, not updated, 0.0<br />
-Denmark_EmeraldInHilleroed, not updated, 0.0<br />
-Finland_HalkokarinEvovene, not updated, 1.0<br />
-USA_CarettaSeaTurtle kihagyva (100%), <br />
-UnitedKingdom_Uddersfield, not updated, 0.1474926253687272<br />
-Netherlands_LuckyClover kihagyva (100%), <br />
-Poland_Jewel kihagyva (100%), <br />
-Poland_Reksio kihagyva (100%), <br />
-Finland_KokkolanVaakuna kihagyva (100%), <br />
-Germany_PapageiCrumstadt kihagyva (100%), <br />
-USA_XIBirthdayMadHatter kihagyva (100%), <br />
-USA_RobHeartsLou1 kihagyva (100%), <br />
-USA_RobHeartsLou2 kihagyva (100%), <br />
-USA_Corgi kihagyva (100%), <br />
-Poland_ZamekPiastow kihagyva (100%), <br />
-UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
-Canada_HalloweenInOttawa kihagyva (100%), <br />
-Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle kihagyva (100%), <br />
-USA_LightningBoltInSapphire, <b>updated</b>, 270, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
+Denmark_EmeraldInHilleroed, <b>updated</b>, 161, <a href="https://www.munzee.com/map/u3by0p0uw/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_EmeraldInHilleroed.json" target="_blank">json</a> <b>100%</b><br />
