--- a/feladat.html
+++ b/feladat.html
@@ -247,3 +247,126 @@ UnitedKingdom_NorthfieldsLondonUndergroundStation, not updated, 0.0<br />
 UnitedKingdom_ShadesGarden kihagyva (100%), <br />
 UnitedKingdom_AddingtonSunflowerGarden, not updated, 0.7999999999999972<br />
 UnitedKingdom_SailingBoat, <b>updated</b>, 622, <a href="https://www.munzee.com/map/u10j6x1kx/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_SailingBoat.json" target="_blank">json</a><br />
+UnitedKingdom_HendonCircle kihagyva (100%), <br />
+Australia_9thBirthdayInQueensland kihagyva (100%), <br />
+Australia_MayPole kihagyva (100%), <br />
+Australia_PyramidOBadges kihagyva (100%), <br />
+Australia_QLD-Dingo kihagyva (100%), <br />
+Australia_HappyTenMunzee kihagyva (100%), <br />
+Australia_QLDPerm-Temp, not updated, -35.0<br />
+Australia_UnicornInThePark kihagyva (100%), <br />
+Germany_Berlin-HighVoltage kihagyva (100%), <br />
+Germany_ColoursOfBerlin kihagyva (100%), <br />
+Germany_9thBirthdayInBerlin kihagyva (100%), <br />
+Germany_EvoInBerlinSteglitz kihagyva (100%), <br />
+Germany_BerlinEvoGarden-PotsdamerPlatz kihagyva (100%), <br />
+Hungary_Debrecen kihagyva (100%), <br />
+Hungary_DeoCachingClan kihagyva (100%), <br />
+Hungary_TocoskertsArrows kihagyva (100%), <br />
+UnitedKingdom_WoodlandAnimals-Fox, not updated, 0.0<br />
+UnitedKingdom_WoodlandAnimals-Badger, not updated, 0.0<br />
+Canada_OttawaCancerRibbon kihagyva (100%), <br />
+Canada_OttawaGoldfish kihagyva (100%), <br />
+Canada_BananaBread kihagyva (100%), <br />
+Canada_Elephriends kihagyva (100%), <br />
+Canada_LizzysUnicorn kihagyva (100%), <br />
+Canada_JeffsFarm kihagyva (100%), <br />
+UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
+Germany_JohnTheFab41 kihagyva (100%), <br />
+Germany_RingoTheFab4, not updated, 0.0<br />
+Germany_GeorgeTheFab42, not updated, 0.9299999999999997<br />
+Germany_PaulTheFab43, not updated, 0.0<br />
+Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
+Hungary_MaXGarden kihagyva (100%), <br />
+Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
+Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
+Hungary_SZTE, not updated, 0.0<br />
+Hungary_MarioInVac, not updated, 0.0<br />
+Hungary_LovagokKertje kihagyva (100%), <br />
+Hungary_ShieldKecskemet, not updated, 0.0<br />
+Hungary_Mini kihagyva (100%), <br />
+Hungary_MinimalIceCubeInBaja kihagyva (100%), <br />
+Hungary_SailboatAtLakeBalaton, not updated, 0.0<br />
+Hungary_EyesInTheNight kihagyva (100%), <br />
+Hungary_PomazLocomotiv kihagyva (100%), <br />
+Slovakia_Bratislava kihagyva (100%), <br />
+Slovakia_ChilliKiller, not updated, 0.0<br />
+Slovakia_LakeLighthousePainting, not updated, 0.0<br />
+Slovakia_ChargeBratislava kihagyva (100%), <br />
+Slovakia_VirtualJoy kihagyva (100%), <br />
+Slovakia_ElectricLetters kihagyva (100%), <br />
+Slovakia_DevinCastle kihagyva (100%), <br />
+Slovakia_EvoFlowerBratislava kihagyva (100%), <br />
+Slovakia_1stDayEvo kihagyva (100%), <br />
+Slovakia_BosniaFlagInBratislava kihagyva (100%), <br />
+Slovakia_AgentSun kihagyva (100%), <br />
+Slovakia_CandleTombstone kihagyva (100%), <br />
+Canada_SecretLantern kihagyva (100%), <br />
+Canada_OttawaCross kihagyva (100%), <br />
+Canada_MysteryBoat kihagyva (100%), <br />
+Canada_SaveTheMonarchs kihagyva (100%), <br />
+Canada_FlutteringByOrleans kihagyva (100%), <br />
+Canada_MunzeeViolin kihagyva (100%), <br />
+Canada_MysteryKeyboard kihagyva (100%), <br />
+Canada_MunzeeDrumSet kihagyva (100%), <br />
+Canada_MunzeeGuitar kihagyva (100%), <br />
+Canada_MunzeeTrumpet kihagyva (100%), <br />
+Canada_OttawaLeprechaun kihagyva (100%), <br />
+Canada_SandcastleFun kihagyva (100%), <br />
+Canada_OttawaTornado kihagyva (100%), <br />
+Canada_MunzeeSnowglobe kihagyva (100%), <br />
+Canada_RainbowStar kihagyva (100%), <br />
+Canada_TheSecretEgg kihagyva (100%), <br />
+Canada_JimmysTractor kihagyva (100%), <br />
+Canada_BeeStrongJeffeth kihagyva (100%), <br />
+Canada_JimmysDog kihagyva (100%), <br />
+Canada_JimmysBoat kihagyva (100%), <br />
+Canada_LizzysKitty kihagyva (100%), <br />
+Canada_RocklandEasterEggs kihagyva (100%), <br />
+Canada_ClairesCake kihagyva (100%), <br />
+Canada_StanleyForDad kihagyva (100%), <br />
+Canada_RocklandTree kihagyva (100%), <br />
+Canada_JimmysRocket kihagyva (100%), <br />
+Canada_BreadInRockland kihagyva (100%), <br />
+Canada_MarchingFlats kihagyva (100%), <br />
+Canada_RocklandHeart kihagyva (100%), <br />
+Canada_LizzysElephant kihagyva (100%), <br />
+Canada_AdventuresInRockland kihagyva (100%), <br />
+Canada_SecretLove kihagyva (100%), <br />
+Canada_LizzysGoldfish kihagyva (100%), <br />
+Belgium_StroopwafelInvasionInVosselaar kihagyva (100%), <br />
+Australia_StroopwafelInvasionInShepparton kihagyva (100%), <br />
+UnitedKingdom_StroopwafelInvasionInAndover, not updated, 0.0<br />
+Australia_StroopwafelInvasionInDapto, not updated, 0.0<br />
+USA_StroopwafelInvasionInFallingWaters, not updated, 0.0<br />
+USA_StroopwafelInvasionInHagerstown, not updated, 0.0<br />
+Australia_StroopwafelInvasionInKelmscott, not updated, 0.0<br />
+UnitedKingdom_StroopwafelInvasionInKingswood, not updated, 0.0<br />
+Sweden_StroopwafelInvasionInLinkoping, not updated, 0.0<br />
+Germany_StroopwafelInvasionInMeitingen, not updated, 0.0<br />
+Canada_StroopwafelInvasionInNewWestminster, not updated, 0.0<br />
+Australia_StroopwafelInvasionInNorlane, not updated, 0.0<br />
+Netherlands_StroopwafelInvasionInOspel, not updated, 0.0<br />
+UnitedKingdom_StroopwafelInvasionInThringstone, not updated, 0.0<br />
+Australia_StroopwafelInvasionInWonthaggi, not updated, 0.0<br />
+Netherlands_StroopwafelInvasionInArnhem kihagyva (100%), <br />
+Germany_StroopwafelInvasionInBerlin kihagyva (100%), <br />
+Canada_StroopwafelInvasionInBrossard kihagyva (100%), <br />
+Australia_StroopwafelInvasionInBrownsPlains kihagyva (100%), <br />
+Germany_StroopwafelInvasionInChemnitz kihagyva (100%), <br />
+USA_StroopwafelInvasionInDesertLodge kihagyva (100%), <br />
+USA_StroopwafelInvasionInEscondido kihagyva (100%), <br />
+Canada_StroopwafelInvasionInGeorgetown kihagyva (100%), <br />
+USA_StroopwafelInvasionInGlenOaks kihagyva (100%), <br />
+Sweden_StroopwafelInvasionInGotenborg kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInGouda kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInGroningen kihagyva (100%), <br />
+Netherlands_StroopwafelInvasionInHoofddorp kihagyva (100%), <br />
+USA_StroopwafelInvasionInMHQ kihagyva (100%), <br />
+Australia_StroopwafelInvasionInMorayfield kihagyva (100%), <br />
+Australia_StroopwafelInvasionInOnkaparingaHills kihagyva (100%), <br />
+Australia_StroopwafelInvasionInPerth kihagyva (100%), <br />
+UnitedKingdom_StroopwafelInvasionInPlympton kihagyva (100%), <br />
+USA_StroopwafelInvasionInRaleigh kihagyva (100%), <br />
+UnitedKingdom_StroopwafelInvasionInBedford kihagyva (100%), <br />
+USA_MHQBash4Casino, <b>updated</b>, 1338, <a href="https://www.munzee.com/map/9vgm17mhu/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MHQBash4Casino.json" target="_blank">json</a> <b>100%</b><br />
