--- a/feladat.html
+++ b/feladat.html
@@ -370,3 +370,4 @@ UnitedKingdom_StroopwafelInvasionInPlympton kihagyva (100%), <br />
 USA_StroopwafelInvasionInRaleigh kihagyva (100%), <br />
 UnitedKingdom_StroopwafelInvasionInBedford kihagyva (100%), <br />
 USA_MHQBash4Casino, <b>updated</b>, 1338, <a href="https://www.munzee.com/map/9vgm17mhu/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MHQBash4Casino.json" target="_blank">json</a> <b>100%</b><br />
+USA_MHQV4Pin, <b>updated</b>, 244, <a href="https://www.munzee.com/map/9vgkbvept/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MHQV4Pin.json" target="_blank">json</a> <b>100%</b><br />
