--- a/feladat.html
+++ b/feladat.html
@@ -371,3 +371,4 @@ USA_StroopwafelInvasionInRaleigh kihagyva (100%), <br />
 UnitedKingdom_StroopwafelInvasionInBedford kihagyva (100%), <br />
 USA_MHQBash4Casino, <b>updated</b>, 1338, <a href="https://www.munzee.com/map/9vgm17mhu/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MHQBash4Casino.json" target="_blank">json</a> <b>100%</b><br />
 USA_MHQV4Pin, <b>updated</b>, 244, <a href="https://www.munzee.com/map/9vgkbvept/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MHQV4Pin.json" target="_blank">json</a> <b>100%</b><br />
+USA_ZeeKnight, <b>updated</b>, 1076, <a href="https://www.munzee.com/map/9vgk3n3mg/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ZeeKnight.json" target="_blank">json</a><br />
