--- a/feladat.html
+++ b/feladat.html
@@ -373,3 +373,4 @@ USA_MHQBash4Casino, <b>updated</b>, 1338, <a href="https://www.munzee.com/map/9v
 USA_MHQV4Pin, <b>updated</b>, 244, <a href="https://www.munzee.com/map/9vgkbvept/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MHQV4Pin.json" target="_blank">json</a> <b>100%</b><br />
 USA_ZeeKnight, <b>updated</b>, 1076, <a href="https://www.munzee.com/map/9vgk3n3mg/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ZeeKnight.json" target="_blank">json</a><br />
 USA_MichaelMyersHalloween, <b>updated</b>, 429, <a href="https://www.munzee.com/map/9vghzj03h/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MichaelMyersHalloween.json" target="_blank">json</a><br />
+USA_MunzeeLogoHistory2011, <b>updated</b>, 328, <a href="https://www.munzee.com/map/9vgkbt1n8/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MunzeeLogoHistory2011.json" target="_blank">json</a><br />
