--- a/feladat.html
+++ b/feladat.html
@@ -378,3 +378,4 @@ USA_MunzeeLogoHistory2013, <b>updated</b>, 197, <a href="https://www.munzee.com/
 USA_MunzeeLogoHistory2014, <b>updated</b>, 180, <a href="https://www.munzee.com/map/9vgkbthh2/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MunzeeLogoHistory2014.json" target="_blank">json</a><br />
 USA_MunzeeLogoHistory2015, <b>updated</b>, 178, <a href="https://www.munzee.com/map/9vgkbtnkm/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MunzeeLogoHistory2015.json" target="_blank">json</a><br />
 USA_PiratesFlag, <b>updated</b>, 323, <a href="https://www.munzee.com/map/9vgkbbfrx/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PiratesFlag.json" target="_blank">json</a> <b>100%</b><br />
+USA_Zelda, <b>updated</b>, 267, <a href="https://www.munzee.com/map/9vgk9ry7y/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Zelda.json" target="_blank">json</a><br />
