--- a/feladat.html
+++ b/feladat.html
@@ -380,3 +380,4 @@ USA_MunzeeLogoHistory2015, <b>updated</b>, 178, <a href="https://www.munzee.com/
 USA_PiratesFlag, <b>updated</b>, 323, <a href="https://www.munzee.com/map/9vgkbbfrx/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PiratesFlag.json" target="_blank">json</a> <b>100%</b><br />
 USA_Zelda, <b>updated</b>, 267, <a href="https://www.munzee.com/map/9vgk9ry7y/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Zelda.json" target="_blank">json</a><br />
 USA_TeenageMutantNinjaTurtles, <b>updated</b>, 562, <a href="https://www.munzee.com/map/9vghxwwmw/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TeenageMutantNinjaTurtles.json" target="_blank">json</a><br />
+Germany_FBombBerlin, <b>updated</b>, 111, <a href="https://www.munzee.com/map/u336wckkv/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_FBombBerlin.json" target="_blank">json</a> <b>100%</b><br />
