--- a/feladat.html
+++ b/feladat.html
@@ -386,3 +386,4 @@ USA_FBombCedarRapids, <b>updated</b>, 104, <a href="https://www.munzee.com/map/9
 Denmark_FBombHammel, <b>updated</b>, 109, <a href="https://www.munzee.com/map/u1zpbx5gt/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_FBombHammel.json" target="_blank">json</a> <b>100%</b><br />
 USA_FBombMcKinney, <b>updated</b>, 108, <a href="https://www.munzee.com/map/9vghxt5yq/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FBombMcKinney.json" target="_blank">json</a> <b>100%</b><br />
 USA_FBombTampa, <b>updated</b>, 108, <a href="https://www.munzee.com/map/djj2j8ht8/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FBombTampa.json" target="_blank">json</a> <b>100%</b><br />
+USA_RoverPin, <b>updated</b>, 1618, <a href="https://www.munzee.com/map/9vgk91cyc/14.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_RoverPin.json" target="_blank">json</a><br />
