--- a/feladat.html
+++ b/feladat.html
@@ -399,3 +399,4 @@ Greece_TheLighthouseOfChania, <b>updated</b>, 99, <a href="https://www.munzee.co
 Jersey_JerzeeClan, <b>updated</b>, 329, <a href="https://www.munzee.com/map/gbwrzrz7x/15.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Jersey_JerzeeClan.json" target="_blank">json</a><br />
 Jersey_JerseyColorPaw, <b>updated</b>, 163, <a href="https://www.munzee.com/map/gbwxb6e5p/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Jersey_JerseyColorPaw.json" target="_blank">json</a><br />
 Jersey_StOuen, <b>updated</b>, 70, <a href="https://www.munzee.com/map/gby2jfhw2/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Jersey_StOuen.json" target="_blank">json</a> <b>100%</b><br />
+Portugal_MadeiraMonumental, <b>updated</b>, 343, <a href="https://www.munzee.com/map/etgcwtt9u/16.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Portugal_MadeiraMonumental.json" target="_blank">json</a> <b>100%</b><br />
