--- a/feladat.html
+++ b/feladat.html
@@ -411,3 +411,28 @@ Portugal_HighVoltageMadeiraIslandBlack, <b>updated</b>, 59, <a href="https://www
 UnitedKingdom_OhioFlagLondon, <b>updated</b>, 91, <a href="https://www.munzee.com/map/gcpstztrd/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_OhioFlagLondon.json" target="_blank">json</a><br />
 France_FrancesFirstPlayerMadeDinan, <b>updated</b>, 70, <a href="https://www.munzee.com/map/gbwe9p554/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/France_FrancesFirstPlayerMadeDinan.json" target="_blank">json</a><br />
 Netherlands_NetherlandsTulipAmstelveen, <b>updated</b>, 61, <a href="https://www.munzee.com/map/u173wggyh/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_NetherlandsTulipAmstelveen.json" target="_blank">json</a> <b>100%</b><br />
+----csoportok<br />
+Portugal_HighVoltageMadeiraIsland, <b>updated</b>, <a href="https://www.munzee.com/map/etgcz3tw7/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Portugal_HighVoltageMadeiraIsland.json" target="_blank">json</a><br />
+USA_MunzeeLogoHistory, <b>updated</b>, <a href="https://www.munzee.com/map/9vgkbt4m4/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MunzeeLogoHistory.json" target="_blank">json</a><br />
+----városok<br />
+Denmark_city_Hilleroed, <b>updated</b>, <a href="https://www.munzee.com/map/u3bwrbnce/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_city_Hilleroed.json" target="_blank">json</a><br />
+Germany_city_Berlin, <b>updated</b>, <a href="https://www.munzee.com/map/u336vvjuz/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Berlin.json" target="_blank">json</a><br />
+Hungary_city_Budapest, <b>updated</b>, <a href="https://www.munzee.com/map/u2mw1keu9/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Budapest.json" target="_blank">json</a><br />
+UnitedKingdom_city_London, <b>updated</b>, <a href="https://www.munzee.com/map/gcpvn9cq4/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_city_London.json" target="_blank">json</a><br />
+----felhasználók<br />
+----témák<br />
+Europa_topic_BuckeyesEuropeanInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/gcpstztrd/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Europa_topic_BuckeyesEuropeanInvasion.json" target="_blank">json</a><br />
+France_topic_BuckeyesEuropeanInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/gbwe9p554/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/France_topic_BuckeyesEuropeanInvasion.json" target="_blank">json</a><br />
+Netherlands_topic_BuckeyesEuropeanInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u173wggyh/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_topic_BuckeyesEuropeanInvasion.json" target="_blank">json</a><br />
+UnitedKingdom_topic_BuckeyesEuropeanInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/gcpstztrd/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_topic_BuckeyesEuropeanInvasion.json" target="_blank">json</a><br />
+World_topic_Emerald, <b>updated</b>, <a href="https://www.munzee.com/map/bdvkkc5wn/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/World_topic_Emerald.json" target="_blank">json</a><br />
+Australia_topic_Emerald, <b>updated</b>, <a href="https://www.munzee.com/map/r1r1j7323/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_topic_Emerald.json" target="_blank">json</a><br />
+UnitedKingdom_topic_Emerald, <b>updated</b>, <a href="https://www.munzee.com/map/gcpuzgnxd/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_topic_Emerald.json" target="_blank">json</a><br />
+USA_topic_Emerald, <b>updated</b>, <a href="https://www.munzee.com/map/bdvkkc5wn/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_topic_Emerald.json" target="_blank">json</a><br />
+World_topic_FBomb, <b>updated</b>, <a href="https://www.munzee.com/map/u2mw4erzn/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/World_topic_FBomb.json" target="_blank">json</a><br />
+Denmark_topic_FBomb, <b>updated</b>, <a href="https://www.munzee.com/map/u1zpbx5gt/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_topic_FBomb.json" target="_blank">json</a><br />
+Germany_topic_FBomb, <b>updated</b>, <a href="https://www.munzee.com/map/u336wckkv/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_topic_FBomb.json" target="_blank">json</a><br />
+Hungary_topic_FBomb, <b>updated</b>, <a href="https://www.munzee.com/map/u2mw4erzn/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_topic_FBomb.json" target="_blank">json</a><br />
+USA_topic_FBomb, <b>updated</b>, <a href="https://www.munzee.com/map/9vghxt5yq/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_topic_FBomb.json" target="_blank">json</a><br />
+<b>stop</b> - 2022.12.12 11:13:58<br />
+összesen 13961<br />
