--- a/feladat.html
+++ b/feladat.html
@@ -9,3 +9,16 @@ Hungary_VotiveChurch, not updated, -44.25000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, <b>updated</b>, 1056, <a href="https://www.munzee.com/map/u2s1uyuvm/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_ChristmasStable.json" target="_blank">json</a><br />
+Slovakia_LePetitPrince, not updated, -0.29999999999999716<br />
+Australia_TicTacMunzee kihagyva (100%), <br />
+Hungary_FlatMattInBudapest, not updated, 0.6000000000000085<br />
+USA_PrattvillePansy, not updated, 0.0<br />
+Hungary_MinerSymbol, not updated, 0.0<br />
+Hungary_Crossbow, not updated, 0.1700000000000017<br />
+USA_MunzeeLogo, not updated, 0.09000000000000341<br />
+NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
+USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
+USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
+UnitedKingdom_LFCBebington, not updated, 0.0<br />
+Finland_Nurmijarvi, not updated, 0.0<br />
+Finland_Hyvinkaa, <b>updated</b>, 392, <a href="https://www.munzee.com/map/udc8vwrpv/15.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_Hyvinkaa.json" target="_blank">json</a><br />
