--- a/feladat.html
+++ b/feladat.html
@@ -44,3 +44,5 @@ Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.0<br />
 USA_Turtle, <b>updated</b>, 679, <a href="https://www.munzee.com/map/dhv9d3vyu/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Turtle.json" target="_blank">json</a><br />
+Finland_BioOtokka, not updated, 0.0<br />
+Canada_GatineauFMGGarden, <b>updated</b>, 551, <a href="https://www.munzee.com/map/f244tegjx/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_GatineauFMGGarden.json" target="_blank">json</a><br />
