--- a/feladat.html
+++ b/feladat.html
@@ -264,3 +264,4 @@ Hungary_Debrecen kihagyva (100%), <br />
 Hungary_DeoCachingClan kihagyva (100%), <br />
 Hungary_TocoskertsArrows kihagyva (100%), <br />
 UnitedKingdom_WoodlandAnimals-Fox, <b>updated</b>, 112, <a href="https://www.munzee.com/map/gcpupqxt9/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_WoodlandAnimals-Fox.json" target="_blank">json</a><br />
+UnitedKingdom_WoodlandAnimals-Badger, <b>updated</b>, 65, <a href="https://www.munzee.com/map/gcpupxnwb/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_WoodlandAnimals-Badger.json" target="_blank">json</a><br />
