--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.12.23 01:10:10<br />
+<b>start</b> - 2022.12.23 06:38:31<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970508<br />
@@ -149,10 +149,10 @@ UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
 USA_LakevillesSeaTurtle kihagyva (100%), <br />
-USA_LightningBoltInSapphire, <b>updated</b>, 305, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
+USA_LightningBoltInSapphire, not updated, 0.0<br />
 USA_AppleValley-EvolutionaryFlower, not updated, 0.0<br />
 Germany_Bullseye kihagyva (100%), <br />
-Finland_TampereElectric, not updated, 0.16611295681062188<br />
+Finland_TampereElectric, not updated, 0.24916943521594703<br />
 USA_MontgomeryBaseball kihagyva (100%), <br />
 USA_HanksBoots, not updated, 0.0<br />
 USA_ColorTheZoo, not updated, 0.0<br />
@@ -279,7 +279,7 @@ Germany_PaulTheFab43, not updated, 0.0<br />
 Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
 Hungary_MaXGarden kihagyva (100%), <br />
 Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
-Hungary_StroopwafelInvasionInFelsogalla, <b>updated</b>, 71, <a href="https://www.munzee.com/map/u2mn7yzxz/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_StroopwafelInvasionInFelsogalla.json" target="_blank">json</a><br />
+Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
 Hungary_SZTE, not updated, 0.4099999999999966<br />
 Hungary_MarioInVac, not updated, 0.0<br />
 Hungary_LovagokKertje kihagyva (100%), <br />
@@ -336,7 +336,9 @@ Canada_SecretLove kihagyva (100%), <br />
 Canada_LizzysGoldfish kihagyva (100%), <br />
 Belgium_StroopwafelInvasionInVosselaar kihagyva (100%), <br />
 Australia_StroopwafelInvasionInShepparton kihagyva (100%), <br />
-UnitedKingdom_StroopwafelInvasionInAndover, <b>updated</b>, 52, <a href="https://www.munzee.com/map/gcngq3xm7/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_StroopwafelInvasionInAndover.json" target="_blank">json</a><br />
-Australia_StroopwafelInvasionInDapto, <b>updated</b>, 62, <a href="https://www.munzee.com/map/r3g5z9k30/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_StroopwafelInvasionInDapto.json" target="_blank">json</a><br />
-USA_StroopwafelInvasionInFallingWaters, <b>updated</b>, 57, <a href="https://www.munzee.com/map/dr095u8tn/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StroopwafelInvasionInFallingWaters.json" target="_blank">json</a><br />
-USA_StroopwafelInvasionInHagerstown, <b>updated</b>, 62, <a href="https://www.munzee.com/map/dr09wfndy/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StroopwafelInvasionInHagerstown.json" target="_blank">json</a><br />
+UnitedKingdom_StroopwafelInvasionInAndover, not updated, 0.0<br />
+Australia_StroopwafelInvasionInDapto, not updated, 0.0<br />
+USA_StroopwafelInvasionInFallingWaters, not updated, 0.0<br />
+USA_StroopwafelInvasionInHagerstown, not updated, 0.0<br />
+Australia_StroopwafelInvasionInKelmscott, not updated, 0.0<br />
+UnitedKingdom_StroopwafelInvasionInKingswood, <b>updated</b>, 51, <a href="https://www.munzee.com/map/gcnhxpp6s/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_StroopwafelInvasionInKingswood.json" target="_blank">json</a><br />
